--- a/package.json
+++ b/package.json
@@ -1,23 +1,32 @@
 {
-  "name": "inksynth-backend",
+  "name": "inksynth-frontend",
+  "private": true,
   "version": "1.0.0",
-  "description": "Secure backend for InkSynth",
-  "main": "dist/api/generate.js",
+  "type": "module",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/api/generate.js",
-    "dev": "tsc -w & nodemon dist/api/generate.js"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.17.0",
-    "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-image-crop": "^11.0.5"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.12.12",
-    "nodemon": "^3.1.0",
-    "typescript": "^5.4.5"
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0"
   }
 }
